--- a/Stats preview card component main/styles.css
+++ b/Stats preview card component main/styles.css
@@ -1,187 +1,147 @@
 :root {
-
-    --very-dark-blue: hsl(233, 47%, 7%); 
-    --dark-desaturated-blue: hsl(244, 38%, 16%);
-    --soft-violet: hsl(277, 64%, 61%);             
-
-    --white: hsl(0, 0%, 100%);
-    --slightlytransparent-white-1: hsla(0, 0%, 100%, 0.75);
-    --slightlytransparent-white-2: hsla(0, 0%, 100%, 0.6);
-
+  --very-dark-blue: hsl(233, 47%, 7%);
+  --dark-desaturated-blue: hsl(244, 38%, 16%);
+  --soft-violet: hsl(277, 64%, 61%);
+  --white: hsl(0, 0%, 100%);
+  --slightlytransparent-white-1: hsla(0, 0%, 100%, 0.75);
+  --slightlytransparent-white-2: hsla(0, 0%, 100%, 0.6);
 }
 
 * {
-    box-sizing: border-box;
-    text-rendering: geometricPrecision;
+  box-sizing: border-box;
+  text-rendering: geometricPrecision;
 }
-
 
 body {
-    background-color: var(--very-dark-blue);
-    font-family: 'Inter';
-    padding: 24px;
+  background-color: var(--very-dark-blue);
+  font-family: "Inter", sans-serif;
+  padding: 24px;
+  color: var(--white);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
 }
 
-
-/* Mobile Breakpoint */
-
-@media (max-width: 899px) {
-
-.page-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    height: 100%;
+/* ul for stats */
+ul {
+  list-style-type: none;
+  padding: 0;
 }
+
+li {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+}
+
+li span:nth-of-type(1) {
+  font-weight: bold;
+  font-size: 1.3rem;
+}
+
+li span:nth-of-type(2) {
+  color: var(--slightlytransparent-white-2);
+  font-weight: lighter;
+  font-size: 0.9rem;
+  letter-spacing: 0.1rem;
+  margin-top: 4px;
+}
+/* end ul for stats */
 
 .main-container {
-    display: flex;
-    flex-direction: column-reverse;
-
-    max-width: 326px;
-
-    background-color: var(--dark-desaturated-blue);
-
-    border-radius: 8px;
-
-    overflow: hidden;
+  width: 100%;
+  max-width: 326px;
+  background-color: var(--dark-desaturated-blue);
+  border-radius: 8px;
+  overflow: hidden;
 }
 
 .text-content {
-    padding: 32px;
+  padding: 32px;
+  text-align: center;
 }
 
 h1 {
-    font-family: 'Inter';
-    font-size: 28px;
-    line-height: 32px;
-    text-align: center;
-
-    margin: 8px 0 24px 0;
-
-    max-width: 380px;
-
-    color: var(--white);
+  font-family: "Inter";
+  font-size: 1.8rem;
+  line-height: 32px;
+  color: var(--white);
 }
 
 h1 span {
-    color: var(--soft-violet);
+  color: var(--soft-violet);
 }
 
 p {
-    font-family: 'Inter';
-    font-size: 15px;
-    line-height: 24px;
-    text-align: center;
+  font-family: "Inter";
+  font-size: 15px;
+  line-height: 24px;
+  /* text-align: center; */
 
-    color: var(--slightlytransparent-white-1);
+  color: var(--slightlytransparent-white-1);
 }
-
-.stats-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-
-    max-width: 360px;
-}
-
-.stats {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 24px 0 8px 0;
-
-}
-
-.stats h2 {
-    color: var(--white);
-    margin: 0;
-}
-
-.stats h3 {
-    font-family: 'Lexend Deca';
-    font-size: 13px;
-    font-weight: 400;
-
-    margin: 8px 0px 0px;
-
-    color: var(--slightlytransparent-white-2);
-}
-
 
 .image-container {
-    width: 100%;
-    border-radius: 8px 8px 0 0;
-    height: 240px;
-    overflow: hidden;
+  width: 100%;
+  height: 240px;
+  overflow: hidden;
 }
 
 .image {
-    width: 100%;
+  width: 100%;
 }
-    
-}
-
-
-
-
-
-
-
-
-
 
 /* Desktop Breakpoint */
 
-@media (min-width: 900px) {
-
-body {
+@media (min-width: 1000px) {
+  body {
     height: 100vh;
-}
+  }
 
-.page-container {
+  ul {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 330px;
+    margin-top: 40px;
+  }
 
-    height: 100%;
-}
+  li {
+    margin: 0;
+  }
 
-.main-container {
+  .main-container {
     display: flex;
-
-    width: 1108px;
-
+    flex-direction: row-reverse;
+    max-width: 1000px;
     background-color: var(--dark-desaturated-blue);
-
     border-radius: 8px;
+    height: 380px;
+  }
 
-    overflow: hidden;
-}
-
-.text-content {
+  .text-content {
     max-width: 55%;
+    text-align: left;
     padding: 72px 32px 72px 72px;
-}
+  }
 
-h1 {
-    font-family: 'Inter';
+  h1 {
+    font-family: "Inter";
     font-size: 36px;
     margin: 0 0 24px 0;
 
     max-width: 380px;
 
     color: var(--white);
-}
+  }
 
-h1 span {
+  h1 span {
     color: var(--soft-violet);
-}
+  }
 
-p {
-    font-family: 'Inter';
+  p {
+    font-family: "Inter";
     font-size: 15px;
     line-height: 24px;
 
@@ -189,44 +149,14 @@ p {
     min-width: 270px;
 
     color: var(--slightlytransparent-white-1);
-}
+  }
 
-.stats-container {
-    display: flex;
-    justify-content: space-between;
-    max-width: 360px;
-    
-}
-
-.stats {
-    margin: 24px 0 8px 0;
-}
-
-.stats h2 {
-    color: var(--white);
-    margin: 0;
-}
-
-.stats h3 {
-    font-family: 'Lexend Deca';
-    font-size: 13px;
-    font-weight: 400;
-
-    margin: 8px 0px 0px;
-
-    color: var(--slightlytransparent-white-2);
-}
-
-
-.image-container {
-    max-width: 50%;
-    height: auto;
-}
-
-.image {
+  .image-container {
     height: 100%;
-    border-radius: 0 8px 8px 0;
-}
+  }
 
-
+  .image {
+    object-fit: cover;
+    height: 100%;
+  }
 }
